@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-27T08:30:33Z",
-  "count_outdated" : 206,
-  "uniques_outdated" : 96,
-  "count" : 232,
+  "timestamp" : "2022-06-27T16:36:49Z",
+  "count_outdated" : 208,
+  "uniques_outdated" : 97,
+  "count" : 233,
   "uniques" : 112,
   "clones" : [
-    {
-      "timestamp": "2022-06-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-14T00:00:00Z",
       "count": 3,
